# FlexComm_bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.xml  requirements.txt  setup.cfg  setup.py  setup_venv.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: bridge_config.yaml
flexcomm_bridge/: __init__.py  __main__.py  bridge_node.py  message_utils.py
flexcomm_bridge/launch/: bridge.launch.py
flexcomm_bridge/protocol/: __init__.py  mqtt_protocol.py
